OnboardingV2Minimal/force-app/main/default/objects/POE_Clicker_Retail_Track__c/POE_Clicker_Retail_Track__c.object-meta.xml
<CustomObject>
    <description>Object for keeping track of the actions on the Clicker Page - for Retail users</description>
    <label>Clicker Retail Track</label>
    <nameField>
        <displayFormat>CRT-{0000000000}</displayFormat>
        <label>Clicker Retail Track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clicker Retail Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>