OnboardingV2Minimal/force-app/main/default/objects/POE_Clicker_Retail_Track__c/fields/POE_Action__c.field-meta.xml
<CustomField>
    <fullName>POE_Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Serviceability Check</fullName>
            </value>
            <value>
                <fullName>Product Selection</fullName>
            </value>
            <value>
                <fullName>Buyflow Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>