OnboardingV2Minimal/force-app/main/default/objects/POE_Clicker_Retail_Track__c/fields/POE_Date__c.field-meta.xml
<CustomField>
    <fullName>POE_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>