OnboardingV2Minimal/force-app/main/default/objects/POE_Clicker_Retail_Track__c/fields/POE_isCount__c.field-meta.xml
<CustomField>
    <fullName>POE_isCount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCount</label>
    <type>Checkbox</type>
</CustomField>