OnboardingV2Minimal/force-app/main/default/objects/POE_Clicker_Retail_Track__c/fields/POE_Store__c.field-meta.xml
<CustomField>
    <fullName>POE_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>POE_Retail_Store__c</referenceTo>
    <relationshipLabel>Clicker Retail Tracks</relationshipLabel>
    <relationshipName>Clicker_Retail_Tracks</relationshipName>
    <type>Lookup</type>
</CustomField>